fix: show more than 9 entries on mobile

--- a/src/shared/components/dashboard/DashboardGroups.module.scss
+++ b/src/shared/components/dashboard/DashboardGroups.module.scss
@@ -11,12 +11,12 @@
   overflow: auto;
 
 
-  @media (max-width: 999px) {
+  @media (max-width: $bpDashboardMoreThan2Col) {
     grid-template-columns: repeat(2, 1fr) !important;
     min-height: 100%;
   }
 
-  @media (min-width: $bpDashboardOneColumn) {
+  @media (min-width: $bpDashboardMoreThan1Col) {
     display: grid;
     text-align: center;
     position: absolute;
@@ -77,7 +77,7 @@
   margin: 64px 32px;
 
 
-  @media (min-width: $bpDashboardOneColumn) {
+  @media (min-width: $bpDashboardMoreThan1Col) {
     opacity: 0;
     animation: minded6622fadeInAnimation ease 2s;
     animation-delay: 1.5s;
@@ -91,12 +91,29 @@
   }
 
 
+  &:nth-child(n+7) {
+    @media (min-width: $bpDashboardMoreThan1Col) {
+      display: none;
+    }
+    @media (min-width: $bpDashboardMoreThan2Col) {
+      display: block;
+    }
+  }
+
+  @media (min-width: $bpDashboardMoreThan2Col) {
+    &:nth-child(n+10) {
+      display: none;
+    }
+  }
+
   &.flexCenter {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    margin-bottom: 0;
+    @media (min-width: $bpDashboardMoreThan1Col) {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      margin-bottom: 0;
+    }
   }
 }
 
